test/conformance/chainsaw/cli/missing-rule-name/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test
spec:
  steps:
  - name: invalid rule name
    try:
    - script:
        content: kyverno test .
        check:
          ($error != null): true
          ($stderr): "Error: failed to run test (The rule missing cannot be found in the policy named disallow-latest-tag.)"
