test/conformance/chainsaw/cli/missing-rule-name/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kyverno-test.yaml
policies:
- policy.yaml
resources:
- resources.yaml
results:
- kind: Pod
  policy: disallow-latest-tag
  resources:
  - test
  result: pass
  rule: missing #this is incorrect
